# tfc-hmi

./: .dockerignore  .flutter-plugins  .gitignore  .wg-obfuscator.conf  CLAUDE.md  README.md  analysis_options.yaml  bak.json  build.yaml  config.json  dart_test.yaml  docker-compose.yml  flake.nix  foo  image_inference_live_dashboard.html  keymappings.json  open62541_dart_issue.md  page-editor copy 2.json  page-editor copy.json  page-editor-roe-io.json  pubspec.yaml  ralph-plan.md  setup-networkmanager-permissions.sh
.orchestrator/: CONTEXT.md  PLAN.md  UAT.md  dashboard-v2.state.json  dashboard.state.json  mqtt-web.state.json  (+12 more)
tools/tfc-orchestrator/: pyproject.toml
tools/tfc-orchestrator/dashboard/: package-lock.json  package.json  vite.config.js
tools/tfc-orchestrator/dashboard/src/: App.svelte
tools/tfc-orchestrator/dashboard/src/lib/: DagGraph.svelte  Header.svelte  LogViewer.svelte  PlanTabs.svelte  StoryTable.svelte  WorkerSlots.svelte  sse.js  stores.js
tools/tfc-orchestrator/orchestrator/: cli.py  cli_v2.py  dag.py  dashboard.py  executor.py  gsd.py  models.py  prompts.py  reviewer.py  state.py  verify.py  worker.py
tools/tfc-orchestrator/plans/: dashboard.yaml  dashboard_v2.yaml  mqtt_web.yaml  multi_repo.yaml
tools/tfc-orchestrator/tests/: test_cli_v3.py  test_dag.py  test_dashboard.py  test_executor.py  test_gsd.py  test_models.py  test_orchestrator.py  test_prompts.py  test_reviewer.py  test_state.py  test_state_v3.py  test_verify.py  test_worker.py
tools/tfc-orchestrator/tfc_orchestrator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
(+825 files in other folders)
